Prevented Bavbar logo from wrapping under different viewport

--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -37,6 +37,7 @@
     font-size: 2rem;
     text-decoration: none;
     padding-top: 6px;
+    text-wrap: nowrap;
 }
 
 .fa-typo3 {
